# MacMerge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES  macmerge.html  main.js  package-lock.json  package.json  preload.js
.claude/: settings.json
.github/workflows/: build-release.yml  manual-release-draft.yml  release-draft-patch.yml  release-draft-rollback.yml  release.yml
assets/: gen_icon.py
renderer/: index.html  renderer.js  style.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
swift/: Package.swift
swift/Sources/MacMerge/: AppDelegate.swift  AppSettings.swift  AppVersion.swift  CompareDropView.swift  DiffEngine.swift  DiffRow.swift  DiffViewController.swift  DirCompareEntry.swift  DirCompareViewController.swift  DirScanner.swift  TextInputCompareViewController.swift  WelcomeViewController.swift  WindowController.swift
swift/Sources/MacMerge/Resources/: icon.icns
swift/Tests/MacMergeTests/: AppLaunchSmokeTests.swift
test/left/: config.json  hello.txt  only_in_left.txt  readme.md
test/left/subdir/: nested.txt  script.sh
test/right/: config.json  hello.txt  only_in_right.txt  readme.md  unchanged.txt
test/right/subdir/: nested.txt  script.sh
